feat: 여행 상태 변경 api #76
